--- a/dillo/src/templates/layout.jade
+++ b/dillo/src/templates/layout.jade
@@ -81,15 +81,17 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 
 
 		// Javascript
-		script(src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js", type="text/javascript")
-		script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js", type="text/javascript")
+		script(src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js", type="text/javascript")
+		script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js", type="text/javascript")
 		script(src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js", type="text/javascript")
 		script(src="//cdn.embed.ly/jquery.embedly-3.1.1.min.js", type="text/javascript")
-		script(src="//cdn.ckeditor.com/4.4.7/basic/ckeditor.js", type="text/javascript")
-		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.3/js/min/perfect-scrollbar.jquery.min.js", type="text/javascript")
+		//- script(src="//cdn.ckeditor.com/4.4.7/basic/ckeditor.js", type="text/javascript")
+		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.10/js/min/perfect-scrollbar.jquery.min.js", type="text/javascript")
 		script(src="{{url_for('static', filename='js/tutti.min.js')}}", type="text/javascript")
 
 		script.
+			// Markdown initialization
+			var convert = new Markdown.getSanitizingConverter().makeHtml;
 
 			$('#popover-home').popover();
 			$('#cd-dropdown').dropdown( {gutter : 5 } );
