Deprecate CKEditor for Markdown. Part 2/2
This only affects comments, posts Markdown support will come later.

- Rewrite of the reply function, now part of regular comment submission
- Enhance Markdown with Pagedown extras, to make it closer to GitHub's
- Complete redesign of the comment submit form
- Some minor cleanup and rename of some variables in sass

Notes:
At the moment when editing a comment, it'd get the html and convert on save.
This could be better if we just retrieved the raw data (before Markdown).
Also on editing comments there is no Markdown preview.

--- a/dillo/src/styles/_config.sass
+++ b/dillo/src/styles/_config.sass
@@ -2,14 +2,25 @@ $color_brand_main: #4c7e93 // 4D84A0 + 4b7886 == 4c7e93
 
 $color_brand_secondary: #e74c3c // e74c3c - dc2900
 $color_background: #EaEbEf
-$color_text: #444
+$color-text: #4d4e53
+
+$color-text-dark: $color-text
+$color-text-dark-primary: #646469 // rgba($color-text, .87)
+$color-text-dark-secondary: #9E9FA2 // rgba($color-text, .54)
+$color-text-dark-hint: #BBBBBD // rgba($color-text, .38)
+
+$color-text-light: white
+$color-text-light-primary: rgba($color-text-light, .87)
+$color-text-light-secondary: rgba($color-text-light, .54)
+$color-text-light-hint: rgba($color-text-light, .38)
 
 $color_upvote: #ff8b60
 $color_downvote: #74a4ff
 
-$color_danger: #dd4b39
-$color_info: #40b0e0
-$color_success: #d5d644
+$color_warning: #F3BB45 !default
+$color_info: #68B3C8 !default // 40b0e0
+$color_success: #27AE60 !default // d5d644
+$color_danger: #EB5E28 !default // dd4b39
 
 $color_background_dialog: $color_background
 
