--- a/dillo/src/templates/layout.jade
+++ b/dillo/src/templates/layout.jade
@@ -85,13 +85,16 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 		script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js", type="text/javascript")
 		script(src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js", type="text/javascript")
 		script(src="//cdn.embed.ly/jquery.embedly-3.1.1.min.js", type="text/javascript")
-		//- script(src="//cdn.ckeditor.com/4.4.7/basic/ckeditor.js", type="text/javascript")
+		script(src="//cdn.ckeditor.com/4.4.7/basic/ckeditor.js", type="text/javascript")
 		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.10/js/min/perfect-scrollbar.jquery.min.js", type="text/javascript")
 		script(src="{{url_for('static', filename='js/tutti.min.js')}}", type="text/javascript")
 
 		script.
+
 			// Markdown initialization
-			var convert = new Markdown.getSanitizingConverter().makeHtml;
+			var convert = new Markdown.getSanitizingConverter();
+			Markdown.Extra.init(convert);
+			convert = convert.makeHtml;
 
 			$('#popover-home').popover();
 			$('#cd-dropdown').dropdown( {gutter : 5 } );
