--- a/dillo/src/themes/dillo/templates/layout.jade
+++ b/dillo/src/themes/dillo/templates/layout.jade
@@ -24,7 +24,7 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 		// Styles
 		link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css",rel="stylesheet")
 		link(href="//netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css", rel="stylesheet")
-		link(href="{{ url_for('static', filename='css/main.css') }}", rel="stylesheet")
+		link(href="{{ url_for_theme_static('css/main.css') }}", rel="stylesheet")
 
 		// Fonts
 		link(href='//fonts.googleapis.com/css?family=Open+Sans:400&subset=latin,latin-ext', rel='stylesheet', type='text/css')
@@ -87,7 +87,7 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 		script(src="//cdn.embed.ly/jquery.embedly-3.1.1.min.js", type="text/javascript")
 		script(src="//cdn.ckeditor.com/4.4.7/basic/ckeditor.js", type="text/javascript")
 		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.10/js/min/perfect-scrollbar.jquery.min.js", type="text/javascript")
-		script(src="{{url_for('static', filename='js/tutti.min.js')}}", type="text/javascript")
+		script(src="{{url_for_theme_static('js/tutti.min.js')}}", type="text/javascript")
 
 		script.
 
